# llms-generator

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  sources.csv
prompts/: default.txt  site.txt
src/llms_generator/: __init__.py  chunker.py  config.py  extractor.py  fetcher.py  main.py  output.py  sitemap.py  usage.py
